[INFER] Avoid bogus assertion in AssertValidPropertyCacheHit, bug 678087.